variaveis do .env

--- a/api/.env
+++ b/api/.env
@@ -1,10 +1,10 @@
 # SPOTIFY KEYS -> insert yours here
-CLIENT_ID=4c05f9412a7f40539df30196dc61af7d
-CLIENT_SECRET=a39495c29eea4604b6e7c001d0130a3b
+CLIENT_ID=
+CLIENT_SECRET=
 
 # DB Variables -> insert yours here
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=bruno
-DB_PASSWORD=bruno.4dev
-DB_NAME=gigmaster
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
